@@ -7,7 +7,7 @@ import scala.collection.JavaConversions._
 import org.apache.cassandra.thrift.Cassandra
 import org.apache.spark.SparkConf
 import org.apache.thrift.protocol.TBinaryProtocol
-import com.datastax.driver.core.{Session, Host, Cluster}
+import com.datastax.driver.core.{SocketOptions, Session, Host, Cluster}
 import com.datastax.driver.core.policies._
 import com.datastax.spark.connector.util.Logging
 
@@ -121,6 +121,7 @@ class CassandraConnector(conf: CassandraConnectorConf)
   /** Opens a Thrift client to the given host. Don't use it unless you really know what you are doing. */
   def createThriftClient(host: InetAddress): CassandraClientProxy = {
     val transportFactory = conf.authConf.transportFactory
+    logDebug("Attempting to create thrift client to %s:%d".format(host.getHostAddress, rpcPort))
     val transport = transportFactory.openTransport(host.getHostAddress, rpcPort)
     val client = new Cassandra.Client(new TBinaryProtocol.Factory().getProtocol(transport))
     conf.authConf.configureThriftClient(client)
@@ -153,12 +154,19 @@ object CassandraConnector extends Logging {
   val retryCount = System.getProperty("spark.cassandra.query.retry.count", "10").toInt
 
   implicit final val protocolVersion: Int = -1
+  val connectTimeout = System.getProperty("spark.cassandra.connection.timeout_ms", "5000").toInt
+  val readTimeout = System.getProperty("spark.cassandra.read.timeout_ms", "12000").toInt
 
   private val sessionCache = new RefCountedCache[CassandraConnectorConf, Session](
     createSession, destroySession, alternativeConnectionConfigs, releaseDelayMillis = keepAliveMillis)
 
   private def createSession(conf: CassandraConnectorConf): Session = {
     logDebug(s"Connecting to cluster: ${conf.hosts.mkString("{", ",", "}")}:${conf.nativePort}")
+
+    val options = new SocketOptions()
+      .setConnectTimeoutMillis(connectTimeout)
+      .setReadTimeoutMillis(readTimeout)
+
     val cluster =
       Cluster.builder()
         .addContactPoints(conf.hosts.toSeq: _*)
@@ -167,6 +175,7 @@ object CassandraConnector extends Logging {
         .withReconnectionPolicy(new ExponentialReconnectionPolicy(minReconnectionDelay, maxReconnectionDelay))
         .withLoadBalancingPolicy(new LocalNodeFirstLoadBalancingPolicy(conf.hosts, Option(localDC)))
         .withAuthProvider(conf.authConf.authProvider)
+        .withSocketOptions(options)
         .build()
 
     try {
